running sinatra app on docker for jetty and tomcat same time